--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,12 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsCQLs4BEql05-xPYJGa9zxvDhoTv0dE8"></script>
+    <script type="text/javascript" src="App.js"></script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
