--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsCQLs4BEql05-xPYJGa9zxvDhoTv0dE8"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
